# seven-redis-nav

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts  加密货币量化交易系统_INVEST评估文档.md  加密货币量化交易系统_UI设计元素分析.md  加密货币量化交易系统_业务需求提取文档.md  加密货币量化交易系统_用户故事文档.md  加密货币量化交易系统_验收标准文档.md
demo/: .gitignore
demo/quant_trading_system/: .env.example  .gitignore  DATABASE_INTEGRATION.md  Dockerfile  PYCHARM_DEBUG_GUIDE.md  README.md  SERVER_STARTUP_GUIDE.md  cleanup_routers.py  debug_backtest.py  debug_cli.py  demo_historical_sync.py  deploy.sh  docker-compose.yml  execute_tests.sh  fix_test_failures.py  pyproject.toml  requirements.txt  run_comprehensive_tests.py  run_risk_tests.py  run_tests.py  start_testing.sh  test.md  test_analysis_report.md  test_api.py  test_startup.py  使用指南.md  回测使用指南.md
demo/quant_trading_system/database/: schema.sql  seed_signal_data.sql
demo/quant_trading_system/doc/: api_recall.md  cor.md  flow.md  market_api.md  refact.md  sign_flow.md  user_api.md  user_db_intro.md  历史数据同步使用指南.md
demo/quant_trading_system/doc/api/: backtest_api.md  leaderboard_api.md  market_api.md  signal_api.md  stats_api.md  strategy_api.md  system_api.md  trading_api.md  user_api.md  websocket_api.md
demo/quant_trading_system/doc/siginal/: signal-db-api-design.md  signal_detail_api.md
demo/quant_trading_system/docker/prometheus/: prometheus.yml
demo/quant_trading_system/docs/tutorial/: 01_python_basics.py  02_quant_concepts.py  03_project_walkthrough.py  04_hands_on_practice.py  05_interview_questions.py
demo/quant_trading_system/examples/: ai_trader_demo.py  demo.py  real_time_collection_example.py
demo/quant_trading_system/publish/: .env.prod.example  Dockerfile.prod  deploy.md  docker-compose.prod.yml  intro.md
demo/quant_trading_system/publish/nginx/: quant_app.conf
demo/quant_trading_system/publish/scripts/: deploy.sh  health_check.sh  rollback.sh
demo/quant_trading_system/src/quant_trading_system/: __init__.py  cli.py  config.py
demo/quant_trading_system/src/quant_trading_system/ai_trader/: environment.py  trainer.py
demo/quant_trading_system/src/quant_trading_system/api/: deps.py  lifespan.py  main.py  middlewares.py
demo/quant_trading_system/src/quant_trading_system/api/admin/: __init__.py
demo/quant_trading_system/src/quant_trading_system/api/audit_logs/: __init__.py
demo/quant_trading_system/src/quant_trading_system/api/c/: __init__.py
demo/quant_trading_system/src/quant_trading_system/api/health/: __init__.py
demo/quant_trading_system/src/quant_trading_system/api/m/: __init__.py
demo/quant_trading_system/src/quant_trading_system/api/market/: __init__.py
demo/quant_trading_system/src/quant_trading_system/core/: __init__.py  config.py  container.py  database.py  enums.py  events.py  exceptions.py  invitation_utils.py  jwt_utils.py  logging.py  message_bus.py  password_utils.py  snowflake.py
demo/quant_trading_system/src/quant_trading_system/engines/: __init__.py  event_engine.py  market_event_bus.py  signal_event_bus.py  signal_stream_engine.py
demo/quant_trading_system/src/quant_trading_system/exchange_adapter/: __init__.py  base.py  binance_base.py  binance_connector.py  binance_gateway.py  binance_rest_client.py  binance_user_stream.py  copy_order_engine.py  factory.py  follow_engine.py  signal_stream.py  signal_stream_engine.py  utils.py  ws_client.py
demo/quant_trading_system/src/quant_trading_system/indicators/: __init__.py  indicator_engine.py  technical.py
demo/quant_trading_system/src/quant_trading_system/mock/: __init__.py  mock_binance_copy_trade.py  mock_binance_user_stream.py  mock_connector.py  mock_data.py
demo/quant_trading_system/src/quant_trading_system/models/: __init__.py  account.py  base.py  database.py  exchange.py  follow.py  leaderboard.py  market.py  signal.py  strategy.py  subscription.py  trading.py  user.py  user_schema.py
demo/quant_trading_system/src/quant_trading_system/services/: __init__.py  user_service.py
demo/quant_trading_system/src/quant_trading_system/strategies/: __init__.py  bollinger_band_strategy.py  doc.md  dual_ma_strategy.py  examples.py  macd_strategy.py  multi_timeframe_ma_breakout.py  rsi_strategy.py
demo/quant_trading_system/src/quant_trading_system/strategy/: base.py  strategy_engine.py
demo/quant_trading_system/tests/: avin_market.py  conftest.py  test_ai_trader.py  test_avin.py  test_backtest.py  test_binance_api.py  test_data_collector.py  test_event_engine.py  test_events.py  test_historical_sync_executor.py  test_indicators.py  test_kline_engine.py  test_market_event_bus.py  test_market_service.py  test_mock_data.py  test_risk_config.py  test_risk_manager.py  test_risk_performance.py  test_risk_scenarios.py  test_strategies.py  test_strategy_engine.py  test_strategy_services.py  test_subscription_api.py  test_trading_engine.py  test_user_api.py
docs/: product-design.md  (+6 more)
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/benches/: phase2_benchmarks.rs
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_phase2_ssh_tls.sql  003_phase2_sentinel_cluster.sql  004_phase4_advanced_tools.sql  005_cli_history_tab_id.sql
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: bitmap.rs  cli_tab.rs  connection.rs  data.rs  file_dialog.rs  hll.rs  import_export.rs  lua.rs  mod.rs  monitor.rs  pubsub.rs  server_config.rs  stream.rs  terminal.rs  tools.rs
src-tauri/src/models/: connection.rs  data.rs  health_check.rs  import_export.rs  key_analyzer.rs  lua.rs  mod.rs  phase2.rs  phase3.rs  terminal.rs
src-tauri/src/services/: bitmap.rs  cli_session_manager.rs  connection.rs  connection_manager.rs  data_ops.rs  health_check.rs  heartbeat.rs  hll.rs  key_analyzer.rs  key_browser.rs  mod.rs  monitor.rs  pubsub.rs  server_config.rs  ssh_tunnel.rs  stream.rs  terminal.rs  tls_connection.rs
src-tauri/src/utils/: config_store.rs  db.rs  keychain.rs  mod.rs  redis_utils.rs
src-tauri/tests/: phase2_integration.rs
(+835 files in other folders)
