[package]
name = "seven-redis-nav"
version = "0.1.0"
description = "Seven Redis Nav — macOS native Redis management tool"
authors = ["avinzhang"]
edition = "2021"
license = "MIT"
repository = "https://github.com/qwzhang01/seven-redis-nav"
keywords = ["redis", "gui", "macos", "tauri", "database"]
categories = ["database", "gui"]

[lib]
name = "seven_redis_nav_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
redis = { version = "0.27", features = ["tokio-comp", "aio", "tokio-native-tls-comp", "cluster-async", "sentinel"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
secrecy = { version = "0.8", features = ["serde"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "migrate", "macros"] }
security-framework = { version = "2", features = ["OSX_10_15"] }
security-framework-sys = { version = "2.17", features = ["OSX_10_15"] }
core-foundation = "0.9"
core-foundation-sys = "0.8"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
ssh2 = "0.9"
native-tls = "0.2"
base64 = "0.22.1"
rdb = "0.3"
csv = "1.3"
rfd = "0.15"
glob = "0.3"
indexmap = "2"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "phase2_benchmarks"
harness = false

[features]
default = ["ssh", "tls"]
ssh = []
tls = []
